--- a/app/globals.css
+++ b/app/globals.css
@@ -1,24 +1,116 @@
 @import "tailwindcss";
 
+@plugin "tailwindcss-animate";
+
+@custom-variant dark (&:is(.dark *));
+
 @theme {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.2 0.05 90);
+    --card: oklch(1 0 0);
+    --card-foreground: oklch(0.2 0.05 90);
+    --popover: oklch(1 0 0);
+    --popover-foreground: oklch(0.2 0.05 90);
+    --primary: oklch(0.85 0.2 95);
+    --primary-foreground: oklch(0.4 0.15 83);
+    --secondary: oklch(0.97 0.02 100);
+    --secondary-foreground: oklch(0.35 0.03 10);
+    --muted: oklch(0.97 0.02 100);
+    --muted-foreground: oklch(0.6 0.02 44);
+    --accent: oklch(0.97 0.02 100);
+    --accent-foreground: oklch(0.35 0.03 10);
+    --destructive: oklch(0.7 0.25 30);
+    --destructive-foreground: oklch(0.98 0.01 97);
+    --border: oklch(0.9 0.02 20);
+    --input: oklch(0.9 0.02 20);
+    --ring: oklch(0.2 0.05 90);
+    --radius: 0.5rem;
+    --chart-1: oklch(0.8 0.25 50);
+    --chart-2: oklch(0.7 0.2 173);
+    --chart-3: oklch(0.6 0.15 197);
+    --chart-4: oklch(0.85 0.22 43);
+    --chart-5: oklch(0.87 0.24 27);
   }
+
+  .dark {
+    --background: oklch(0.07 0.0217 293);
+    --foreground: oklch(0.98 0.01 97);
+    --card: oklch(0.07 0.0217 293);
+    --card-foreground: oklch(0.98 0.01 97);
+    --popover: oklch(0.2 0.05 90);
+    --popover-foreground: oklch(0.98 0.01 97);
+    --primary: oklch(0.85 0.2 95);
+    --primary-foreground: oklch(0.4 0.15 83);
+    --secondary: oklch(0.3 0.02 12);
+    --secondary-foreground: oklch(0.98 0.01 97);
+    --muted: oklch(0.3 0.02 12);
+    --muted-foreground: oklch(0.65 0.03 24);
+    --accent: oklch(0.3 0.02 12);
+    --accent-foreground: oklch(0.98 0.01 97);
+    --destructive: oklch(0.4 0.22 0);
+    --destructive-foreground: oklch(0.98 0.01 97);
+    --border: oklch(0.3 0.02 12);
+    --input: oklch(0.3 0.02 12);
+    --ring: oklch(0.7 0.3 35);
+    --chart-1: oklch(0.7 0.2 220);
+    --chart-2: oklch(0.65 0.2 160);
+    --chart-3: oklch(0.75 0.2 30);
+    --chart-4: oklch(0.8 0.22 280);
+    --chart-5: oklch(0.78 0.25 340);
+  }
+
+
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
